--- a/src/style/style.css
+++ b/src/style/style.css
@@ -91,7 +91,6 @@ label {
 }
 label:hover {
     background-color: rgba(47, 49, 47, 0.8);
-    border: solid 2px rgb(82, 82, 81);
 }
 
 .formulario section {
@@ -103,8 +102,8 @@ label:hover {
 }
 
 .formulario section div {
-    flex-shrink: 2;
     display: flex;
+    margin: 0 40px;
 }
 
 .formulario section input:hover {
@@ -158,4 +157,20 @@ label:hover {
 .send-input:hover {
     background-color: rgb(82, 82, 81);
     cursor: pointer;
+}
+
+.feitoPor {
+    position: fixed;
+    color: #fff;
+    left: 5px;
+    bottom: 5px;
+    z-index: 0;
+    width: 58px;
+}
+.feitoPor:hover {
+    text-decoration: underline;
+    box-shadow: 2px 2px 2px #23aeff;
+}
+.feitoPor h2{
+    font-size: 6pt;
 }
